--- a/data-engineer.html
+++ b/data-engineer.html
@@ -113,7 +113,7 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/9tdo7ggrr5teama7tid1eqekxw'>Data Engineer | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/9tdo7ggrr5teama7tid1eqekxw'>Data Engineer | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY  ?  New York</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -164,7 +164,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Burnaby</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://oncase.recruitee.com/o/data-engineer-sao-paulo'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oncase.recruitee.com/o/data-engineer-sao-paulo'>
       Data Engineer - S?o Paulo - Oncase
     </a></h5> 
 <p><span class="badge badge-light">S?o Paulo S?o Paulo  S?o Paulo Brazil  S?o Paulo  S?o Paulo</span></p>
@@ -226,7 +226,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://openclassrooms.recruitee.com/o/data-engineer'>
+<h5><a href='https://openclassrooms.recruitee.com/o/data-engineer'>
       Data Engineer - OpenClassrooms
     </a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
@@ -252,7 +252,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://assembly.applytojob.com/apply/qAc4rpa0wc/Associate-Director-Data-Engineering'>Associate Director, Data Engineering - Assembly - Career Page</a></h5> 
+<h5><a href='http://assembly.applytojob.com/apply/qAc4rpa0wc/Associate-Director-Data-Engineering'>Associate Director, Data Engineering - Assembly - Career Page</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -308,7 +308,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/starry/jobs/4496358002'>Job Application for Data Engineering Manager at Starry</a></h5> 
+<h5><a href='https://boards.greenhouse.io/starry/jobs/4496358002'>Job Application for Data Engineering Manager at Starry</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -356,7 +356,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Berlin Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/tucows/job/oeCqbfwb'>Tucows Careers - Data Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/tucows/job/oeCqbfwb'>Tucows Careers - Data Engineer</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario  Canada Canada</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -381,7 +381,7 @@ Engineering. Upload a file. Use Dropbox?...</p>
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698222148-data-engineer-with-crm-etl-design-sql-python'>Bey Data Engineer with CRM, ETL design, SQL, Python | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698222148-data-engineer-with-crm-etl-design-sql-python'>Bey Data Engineer with CRM, ETL design, SQL, Python | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA San Mateo</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
